<resources>
    <string name="app_name">锦欣健康</string>
    <string name="page_home">首页</string>
    <string name="page_current_check">本次检查</string>
    <string name="page_vip">VIP</string>
    <string name="page_user">我的</string>
    <string name="load_tel">手机号</string>
    <string name="login">登录</string>
    <string name="regist_adult">成人注册</string>
    <string name="regist_child">儿童注册</string>
    <string name="login_no">暂不登录，随便逛逛</string>
    <string name="page_password">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_addr">静秀路66号四楼中医产后康复科： </string>
    <string name="user_addr1">三官堂街3号一楼中医产后康复科： </string>
    <string name="user_qrstring">请扫一扫上面的二维码</string>

    <!-- 健康管理界面 -->
    <string name="page_health_manage">健康管理</string>
    <string name="health_manager_title">服务项目</string>
    <string name="health_manager_used">已使用：</string>
    <string name="health_manager_total">总数：</string>
    <string name="health_manager_actual">实付：</string>
    <string name="health_manager_check">查看明细</string>
    <string name="health_manager_status_1">可用</string>
    <string name="health_manager_status_2">完成</string>
    <string name="health_manager_status_3">过期</string>
    <string name="health_manager_status_4">退费</string>
    <string name="health_manager_status_5">作废</string>

    <string name="user_message_center_title">消息中心</string>
    <string name="user_qr_title">我的二维码</string>
    <string name="user_cantact_me_title">联系我们</string>
    <string name="user_zhiqing_title">知情同意书</string>

    <string name="consumption_title">消费记录</string>

    <item type="id" name="tag_first">
    </item>
    <item type="id" name="tag_second">
    </item>

    <string name="costomer_type">顾客类别：</string>
    <string name="name">姓名：</string>
    <string name="tel">联系电话：</string>
    <string name="pwd">密码：</string>
    <string name="sex">性别：</string>
    <string name="addr">联系地址：</string>
    <string name="IDCard">身份证号码：</string>
    <string name="birthday">生日：</string>
    <string name="allergy">有无过敏史：</string>
    <string name="disease">有无疾病史：</string>
    <string name="babyBirthday">分娩日期：</string>
    <string name="mother_name">母亲姓名：</string>
    <string name="delivery_situation">分娩情况：</string>
    <string name="where_is_come">客户来源：</string>
    <string name="OK">确定</string>

    <string name="pwd_length">（至少6位）</string>

    <string-array name="spinner_yesorno">
        <item>无</item>
        <item>有</item>
    </string-array>
    <string-array name="spinner_type">
        <item>普通客户</item>
        <item>VIP客户</item>
    </string-array>
    <string-array name="spinner_sex">
        <item>女</item>
        <item>男</item>
    </string-array>
    <string-array name="spinner_where">
        <item>慕名而来</item>
        <item>住院部</item>
        <item>5楼VIP</item>
        <item>6楼VIP</item>
        <item>中医科</item>
        <item>朋友推荐</item>
        <item>网络推广</item>
    </string-array>
    <string-array name="spinner_delivery">
        <item>无</item>
        <item>单顺</item>
        <item>单剖</item>
        <item>多顺</item>
        <item>多剖</item>
    </string-array>
    <string name="cancel">取消</string>
    
    <!-- VIP -->
    <string name="vip_title">VIP预约</string>
    <string name="vip_select_time">预约时间</string>
    <string name="vip_select_dep">选择部门</string>
    <string name="vip_make_sure">请确认您的订单信息</string>
    <string name="vip_submit">提交订单</string>
    <string name="vip_list_title">显示最近的5条信息：</string>
    <string name="vip_item_request_time">申请时间：</string>
    <string name="vip_item_reservation_time">预约时间:</string>
    <string name="vip_item_dep">部门 ：</string>
    <string name="vip_item_status">状态:</string>

    <!-- Current Check  -->
    <string name="current_num">客户编号：</string>
    <string name="current_shoufa">手法排队：</string>
    <string name="current_yiqi">仪器排队：</string>
    <string name="current_yujia">瑜伽排队：</string>
    <string name="current_no">今日该类暂无排队信息</string>
    <string name="current_xiangmu">服务项目</string>
    <string name="current_zhenduan">诊断内容</string>
    <string name="current_xiaofei">消费状态</string>
    <string name="current_renyuan">服务人员</string>
    <string name="current_empty">今日暂无消费项目</string>

</resources>
