<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_manager_title"/>
        <TextView
            android:id="@+id/health_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/health_manager_status_1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e9e3e3"
        android:orientation="vertical">
        <TextView
            android:id="@+id/projectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/projectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#979797"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_manager_used"/>
        <TextView
            android:id="@+id/usedEdit"
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_manager_total"/>
        <TextView
            android:id="@+id/totalEdit"
            android:layout_width="5dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_manager_actual"/>
        <TextView
            android:id="@+id/actulEdit"
            android:layout_width="5dp"
            android:textColor="@color/colorHomePageBlue"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/health_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_manager_check"
        android:layout_gravity="right"
        android:textColor="@color/colorHomePageBlue"/>


</LinearLayout>
