<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_item_request_time" />
        <TextView
            android:gravity="bottom"
            android:id="@+id/vip_request_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#f49302"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#eeeeee"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/user"
            android:layout_gravity="top"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_item_reservation_time" />
                <TextView
                    android:id="@+id/vip_reservation_time"
                    android:layout_width="0dp"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/vip_item_status"/>
                <TextView
                    android:id="@+id/vip_reservation_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textColor="#66a09a"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_item_dep"/>
                <TextView
                    android:id="@+id/vip_reservation_dep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
